Fix import field options and alignment

--- a/src/assets/scss/tab-secondary.scss
+++ b/src/assets/scss/tab-secondary.scss
@@ -24,7 +24,7 @@
 
 :host ::ng-deep .p-tabmenu .p-tabmenu-nav {
     background-color: transparent;
-    @apply tw-border-b tw-border-b-nav-tabs-active-border tw-pl-14-px #{!important};
+    @apply tw-border-b tw-border-b-nav-tabs-active-border #{!important};
 }
 
 :host ::ng-deep .p-tabmenu .p-tabmenu-nav .p-tabmenuitem {
